# Can-Tracker-Service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  remixed-c3e65622.html
alembic/: env.py
alembic/versions/: 20260614_0001_backend_foundation.py  20260614_0002_auth_rbac_and_users.py  20260614_0003_pii_security_and_audit.py  20260614_0004_family_member_crud_apis.py  20260614_0005_mfu_import_and_sync.py  20260614_0006_reporting_and_exports.py  20260616_0007_module_memberships.py  20260709_0008_nullable_can_and_status_renames.py  20260709_0009_nullable_family_rm.py  20260709_0010_member_bank_accounts.py  20260709_0011_can_sensitive_access_settings.py  20260709_0012_nominee_name.py
app/: __init__.py  main.py
app/api/: deps.py  errors.py  health.py  middleware.py
app/cli/: __init__.py  bootstrap_admin.py
app/core/: config.py  database.py  logging.py  pii.py  security.py
app/domain/: __init__.py  access.py  calculations.py  compliance.py  enums.py  records.py  reports.py  tasks.py
app/models/: __init__.py  audit.py  base.py  family.py  imports.py  reporting.py  user.py
app/repositories/: families.py  members.py
app/schemas/: __init__.py  audit.py  common.py  dashboard.py  families.py  imports.py  members.py  (+3 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
old_frontend/: CRMOperationsDashboard.jsx  can_tracker_dashboard.html  transaction_processing_dashboard.html
scripts/: backup_postgres.sh  serve_ui.py
tests/: conftest.py
(+86 files in other folders)
